--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.7.1",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.7.0",
