--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foodexplorer",
+  "name": "testing",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,6 +16,7 @@
     "framer-motion": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.7.1",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.7.0",
@@ -26,5 +27,10 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
-  }
+  },
+  "description": "test",
+  "main": "testindex",
+  "repository": "https://github.com/Romeusorionaet/FrontendFood.git",
+  "author": "romeu soares",
+  "license": "MIT"
 }
