--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@glidejs/glide": "^3.6.0",
+    "@mui/lab": "^5.0.0-alpha.124",
+    "@mui/material": "^5.11.15",
     "axios": "^1.3.1",
     "classnames": "^2.3.2",
     "framer-motion": "^10.0.0",
